--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 /* Now add your overrides below */
 
 body {
-  background-color: #fdfdfd; /* light background */
+  background-color: #fff5d7; /* light background */
 }
 
 h1, h2, h3 {
