--- a/_layouts/custom.html
+++ b/_layouts/custom.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/style.css"> <!-- optional -->
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
   <header>
     <h1>{{ page.title }}</h1>
-    <p><time datetime="{{ page.date }}">{{ page.date | date: "%-d %B %Y" }}</time></p>
+    {% if page.date %}
+      <p><time datetime="{{ page.date }}">{{ page.date | date: "%-d %B %Y" }}</time></p>
+    {% endif %}
     <hr>
   </header>
 
